--- a/.github/workflows/Rockchip-Immortal.yml
+++ b/.github/workflows/Rockchip-Immortal.yml
@@ -15,12 +15,12 @@ permissions: write-all
 jobs:
   owrt_config:
     #调用公用编译核心OWRT-CORE.yml
-    uses: ./.github/workflows/NEW-CORE.yml
+    uses: ./.github/workflows/IMM-CORE.yml
     with:
       #编译平台
       OWRT_TARGET: Rockchip
       #默认主题
-      OWRT_THEME: bootstrap
+      OWRT_THEME: argon
       #默认主机名
       OWRT_NAME: OWRT
       #默认密码，仅作展示，请勿乱改
